--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -16,11 +16,11 @@ jobs:
         password: ${{ secrets.REGISTRY_PASSWORD }}
 
     - run: |
-        docker build . -t mdevopsvinaycicd.azurecr.io/cicd:${{ github.sha }}
-        docker push mycontainer.azurecr.io/cicd:${{ github.sha }}     
+        docker build . -t devopsvinaycicd.azurecr.io/cicd:${{ github.sha }}
+        docker push devopsvinaycicd.azurecr.io/cicd:${{ github.sha }}     
 
     - uses: azure/webapps-deploy@v2
       with:
         app-name: 'cicd'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        images: 'mycontainer.azurecr.io/myapp:${{ github.sha }}'
+        images: 'devopsvinaycicd.azurecr.io/cicd:${{ github.sha }}'
